<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AboutActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:clickable="true"
        android:background="#FAFAFA"
        android:orientation="vertical"
        android:focusable="true">


        <android.support.v4.widget.NestedScrollView
            android:id="@+id/nested_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:scrollingCache="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/spacing_middle">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="2dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingBottom="@dimen/spacing_middle"
                        android:paddingTop="@dimen/spacing_middle">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/spacing_middle"
                            android:layout_marginTop="@dimen/spacing_middle"
                            android:gravity="center_vertical"
                            android:minHeight="@dimen/spacing_xxlarge"
                            android:orientation="horizontal"
                            android:paddingLeft="@dimen/spacing_medium"
                            android:paddingRight="@dimen/spacing_medium">

                            <View
                                android:layout_width="@dimen/spacing_large"
                                android:layout_height="wrap_content" />

                            <ImageView
                                android:layout_width="@dimen/spacing_xxlarge"
                                android:layout_height="@dimen/spacing_xxlarge"
                                android:src="@drawable/icon_restore"
                                android:tint="@color/grey_40" />

                            <View
                                android:layout_width="@dimen/spacing_large"
                                android:layout_height="wrap_content" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Photos Recovery"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                                    android:textColor="@color/grey_80" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="restore deleted photos"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                                    android:textColor="@color/grey_40" />

                            </LinearLayout>


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:gravity="center_vertical"
                            android:minHeight="@dimen/spacing_xxlarge"
                            android:orientation="horizontal"
                            android:paddingLeft="@dimen/spacing_medium"
                            android:paddingRight="@dimen/spacing_medium">

                            <View
                                android:layout_width="@dimen/spacing_mlarge"
                                android:layout_height="wrap_content" />

                            <ImageButton
                                android:layout_width="@dimen/spacing_xmlarge"
                                android:layout_height="@dimen/spacing_xmlarge"
                                android:background="@android:color/transparent"
                                android:tint="@color/grey_40"
                                app:srcCompat="@drawable/ic_info" />

                            <View
                                android:layout_width="@dimen/spacing_mlarge"
                                android:layout_height="wrap_content" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Version"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                    android:textColor="@color/grey_80"
                                    app:fontFamily="sans-serif-medium" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="1.0.0"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                                    android:textColor="@color/grey_40" />

                            </LinearLayout>


                        </LinearLayout>



                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:gravity="center_vertical"
                            android:minHeight="@dimen/spacing_xxlarge"
                            android:orientation="horizontal"
                            android:paddingLeft="@dimen/spacing_medium"
                            android:paddingRight="@dimen/spacing_medium">

                            <View
                                android:layout_width="@dimen/spacing_mlarge"
                                android:layout_height="wrap_content" />

                            <ImageButton
                                android:layout_width="@dimen/spacing_xmlarge"
                                android:layout_height="@dimen/spacing_xmlarge"
                                android:tint="@color/grey_40"
                                android:background="@android:color/transparent"
                                app:srcCompat="@drawable/ic_description" />

                            <View
                                android:layout_width="@dimen/spacing_mlarge"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Descritoion"
                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                android:textColor="@color/grey_90" />

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:gravity="center_vertical"
                            android:minHeight="@dimen/spacing_xxlarge"
                            android:orientation="horizontal"
                            android:paddingLeft="@dimen/spacing_medium"
                            android:paddingRight="@dimen/spacing_medium">

                            <View
                                android:layout_width="@dimen/spacing_mlarge"
                                android:layout_height="wrap_content" />



                            <View
                                android:layout_width="60dp"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/descripton"
                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                android:textColor="@color/grey_90" />

                        </LinearLayout>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_middle" />

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="2dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingBottom="@dimen/spacing_middle"
                        android:paddingTop="@dimen/spacing_middle">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/spacing_middle"
                            android:layout_marginLeft="@dimen/spacing_mlarge"
                            android:layout_marginRight="@dimen/spacing_mlarge"
                            android:layout_marginTop="@dimen/spacing_middle"
                            android:text="Author"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/grey_90"
                            app:fontFamily="sans-serif-medium" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:gravity="center_vertical"
                            android:minHeight="@dimen/spacing_xxlarge"
                            android:orientation="horizontal"
                            android:paddingLeft="@dimen/spacing_medium"
                            android:paddingRight="@dimen/spacing_medium">

                            <View
                                android:layout_width="@dimen/spacing_mlarge"
                                android:layout_height="wrap_content" />

                            <ImageButton
                                android:layout_width="@dimen/spacing_xmlarge"
                                android:layout_height="@dimen/spacing_xmlarge"
                                android:background="@android:color/transparent"
                                android:tint="@color/grey_40"
                                app:srcCompat="@drawable/ic_mail" />

                            <View
                                android:layout_width="@dimen/spacing_mlarge"
                                android:layout_height="wrap_content" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/autor"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                    android:textColor="@color/grey_80"
                                    app:fontFamily="sans-serif-medium" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/nav_header_subtitle"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                                    android:textColor="@color/grey_40" />

                            </LinearLayout>


                        </LinearLayout>



                    </LinearLayout>

                </android.support.v7.widget.CardView>



            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>


        <com.google.android.gms.ads.AdView
            android:layout_alignParentBottom="true"
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_id">
        </com.google.android.gms.ads.AdView>


    </RelativeLayout>

</android.support.constraint.ConstraintLayout>